kprocessrunner: For apps running in terminal, use terminal emulator's appId

When running an app org.foo.bar that has Terminal=true we request an XDG activation token
for org.foo.bar. However the actual resulting window will be org.kde.konsole (or whatever the
default terminal is).

This mismatch will result in the startup feedback being stuck and eventually timing our.

Instead resolve the appId of the terminal and use that to request the token.

BUG: 459986